# hft-playpen

./: .gitignore  CMakeLists.txt  README.md
common/: CMakeLists.txt
common/include/common/: types.h
logger/: CMakeLists.txt
logger/include/: logger.h
logger/include/logger/: logger.h
logger/tests/: logger_test.cpp
matching_engine/: CMakeLists.txt
matching_engine/include/matching_engine/: matching_engine.h
matching_engine/tests/: test_matching_engine.cpp
order_generator/: CMakeLists.txt
order_generator/include/order_generator/: order_generator.h
order_parser/: CMakeLists.txt
order_parser/include/order_parser/: message_parser.h
order_parser/tests/: test_order_parser.cpp
orderbook/: CMakeLists.txt
orderbook/include/orderbook/: orderbook.h
orderbook/tests/: test_orderbook.cpp
protocol/: CMakeLists.txt
protocol/include/protocol/: binary_codec.h  message_dispatcher.h  messages.h
protocol/tests/: test_protocol.cpp
ring_buffer/: CMakeLists.txt
ring_buffer/benchmarks/: bench_ring_buffer.cpp
ring_buffer/include/: ring_buffer.h
ring_buffer/include/ring_buffer/: ring_buffer.h
ring_buffer/tests/: test_ring_buffer.cpp
slab_alloc/: CMakeLists.txt
slab_alloc/include/: slab_alloc.h
slab_alloc/include/slab_alloc/: slab_alloc.h
slab_alloc/tests/: test_slab_alloc.cpp
trading_pipeline/: CMakeLists.txt
trading_pipeline/include/trading_pipeline/: trading_pipeline.h
trading_pipeline/src/: trading_pipeline.cpp
